--- a/resources/assets/sass/home.scss
+++ b/resources/assets/sass/home.scss
@@ -5,7 +5,7 @@
 
 html, body {
   color: #505050;
-  height: auto;
+  //height: auto;
   overflow-x: hidden;
   position: relative;
   font-family: NotoSansHans-Regular, AvenirNext-Regular, arial, Hiragino Sans GB, "Microsoft Yahei", "Hiragino Sans GB", "WenQuanYi Micro Hei", sans-serif;
