--- a/public/css/home.css
+++ b/public/css/home.css
@@ -5909,6 +5909,9 @@ h3.divider:after {
 .m-b-0 {
   margin-bottom: 0 !important; }
 
+.m-t-3 {
+  margin-top: 3rem !important; }
+
 .d-block {
   display: block !important; }
 
@@ -5917,6 +5920,9 @@ h3.divider:after {
 
 .pull-xs-left {
   float: left !important; }
+
+.w-100 {
+  width: 100%; }
 
 @media (min-width: 544px) {
   .pull-sm-left {
@@ -6144,9 +6150,27 @@ footer hr {
 .text-muted {
   color: #888 !important; }
 
+.text-xs-center {
+  text-align: center !important; }
+
+/*  card  */
+.card {
+  position: relative;
+  display: block;
+  margin-bottom: 2rem;
+  background-color: #fff;
+  border-radius: 0.5rem;
+  border: 0 solid transparent; }
+
+@media (min-width: 544px) {
+  .card-columns {
+    -moz-column-count: 3;
+    column-count: 3;
+    -moz-column-gap: 1.25rem;
+    column-gap: 1.25rem; } }
+
 html, body {
   color: #505050;
-  height: auto;
   overflow-x: hidden;
   position: relative;
   font-family: NotoSansHans-Regular, AvenirNext-Regular, arial, Hiragino Sans GB, "Microsoft Yahei", "Hiragino Sans GB", "WenQuanYi Micro Hei", sans-serif; }
