--- a/resources/assets/sass/home.scss
+++ b/resources/assets/sass/home.scss
@@ -6,7 +6,6 @@
 html, body {
   color: #505050;
   //height: auto;
-  overflow-x: hidden;
   position: relative;
   font-family: NotoSansHans-Regular, AvenirNext-Regular, arial, Hiragino Sans GB, "Microsoft Yahei", "Hiragino Sans GB", "WenQuanYi Micro Hei", sans-serif;
 }
@@ -19,6 +18,50 @@ html, body {
   background: #fff;
 }
 
+.bg-cover{
+  background: url('/assets/images/home/home-banner.jpg');
+}
+.img-fluid {
+  display: inline-block;
+}
+//自定义
+.overview-key{
+  list-style: none;
+  padding-left: 0;
+  justify-content: center;
+  display: flex;
+}
+.overview-key li{
+  position: relative;
+  display: inline-flex;
+  border-radius: 50%;
+  border: 2px solid #eee;
+  margin: 10px;
+  padding: 10px;
+  min-height: 100px;
+  min-width:100px;
+}
+.overview-key li span{
+  width: 100%;
+  display: inline-flex;
+  align-items: center;
+  vertical-align: middle;
+  justify-content: center;
+}
+@media(max-width:768px){
+  .overview-key li{
+    min-height: 70px;
+    min-width: 70px;
+  }
+}
+@media(min-width: 768px){
+  .members .card-columns {
+    -moz-column-count: 4;
+    column-count: 4;
+    -moz-column-gap: 30px;
+    column-gap: 30px;
+  }
+}
 @media (max-width: 768px){
   #navbar .container {
     margin-left: auto;
