--- a/resources/assets/sass/header.scss
+++ b/resources/assets/sass/header.scss
@@ -12,8 +12,8 @@
   color: rgba(255, 255, 255, 0.75);
   line-height:50px;
 }
-.navbar-dark .navbar-nav .nav-link:focus, .navbar-dark .navbar-nav .nav-link:hover {
-  color: white;
+.nav-item.active .nav-link,.navbar-dark .navbar-nav .nav-link:focus, .navbar-dark .navbar-nav .nav-link:hover {
+  color: #e60012;
   background: inherit;
 }
 .navbar-toggler {
