--- a/resources/assets/sass/theme.scss
+++ b/resources/assets/sass/theme.scss
@@ -414,6 +414,7 @@ footer hr {
 /* text-emphasis*/
 .text-muted {
   color: #888 !important;
+  text-indent:2em;//首行缩进2汉字
 }
 .text-xs-center {
   text-align: center !important;
