--- a/public/css/home.css
+++ b/public/css/home.css
@@ -6088,10 +6088,12 @@ h3.divider:after {
 
 /* MEMBERS */
 .members .card-columns {
-  -moz-column-count: 5;
   column-count: 5;
-  -moz-column-gap: 30px;
-  column-gap: 30px; }
+  -webkit-column-count: 5;
+  -moz-column-count: 5;
+  column-gap: 30px;
+  -webkit-column-gap: 30px;
+  -moz-column-gap: 30px; }
 
 .members .card {
   padding: 1.5rem !important;
@@ -6108,15 +6110,18 @@ h3.divider:after {
 
 @media (max-width: 1024px) {
   .members .card-columns {
-    -moz-column-count: 3;
-    column-count: 3; } }
+    column-count: 3;
+    -webkit-column-count: 3;
+    -moz-column-count: 3; } }
 
 @media (max-width: 544px) {
   .members .card-columns {
-    -moz-column-count: 2;
     column-count: 2;
-    -moz-column-gap: 20px;
-    column-gap: 20px; }
+    -webkit-column-count: 2;
+    -moz-column-count: 2;
+    column-gap: 20px;
+    -webkit-column-gap: 20px;
+    -moz-column-gap: 20px; }
   .members .card {
     padding: 1.25rem !important;
     margin-bottom: 20px;
@@ -6167,10 +6172,12 @@ footer hr {
 
 @media (min-width: 544px) {
   .card-columns {
-    -moz-column-count: 3;
     column-count: 3;
+    -moz-column-count: 3;
+    -webkit-column-count: 3;
+    column-gap: 1.25rem;
     -moz-column-gap: 1.25rem;
-    column-gap: 1.25rem; } }
+    -webkit-column-gap: 1.25rem; } }
 
 html, body {
   color: #505050;
@@ -6235,10 +6242,13 @@ html, body {
 
 @media (min-width: 768px) {
   .members .card-columns {
-    -moz-column-count: 4;
+    min-height: 360px;
     column-count: 4;
-    -moz-column-gap: 30px;
-    column-gap: 30px; } }
+    -webkit-column-count: 4;
+    -moz-column-count: 4;
+    column-gap: 30px;
+    -webkit-column-gap: 30px;
+    -moz-column-gap: 30px; } }
 
 @media (max-width: 768px) {
   #navbar .container {
