--- a/resources/assets/sass/theme.scss
+++ b/resources/assets/sass/theme.scss
@@ -338,12 +338,12 @@ h3.divider:after {
 
 /* MEMBERS */
 .members .card-columns {
-  -moz-column-count: 5;
-  -webkit-column-count: 5;
   column-count: 5;
-  -moz-column-gap: 30px;
-  -webkit-column-gap: 30px;
+  -webkit-column-count: 5;
+  -moz-column-count: 5;
   column-gap: 30px;
+  -webkit-column-gap: 30px;
+  -moz-column-gap: 30px;
 }
 .members .card {
   padding: 1.5rem !important;
@@ -360,20 +360,20 @@ h3.divider:after {
 
 @media (max-width: 1024px) {
   .members .card-columns {
-    -moz-column-count: 3;
-    -webkit-column-count: 3;
     column-count: 3;
+    -webkit-column-count: 3;
+    -moz-column-count: 3;
   }
 }
 
 @media (max-width: 544px) {
   .members .card-columns {
-    -moz-column-count: 2;
-    -webkit-column-count: 2;
     column-count: 2;
-    -moz-column-gap: 20px;
-    -webkit-column-gap: 20px;
+    -webkit-column-count: 2;
+    -moz-column-count: 2;
     column-gap: 20px;
+    -webkit-column-gap: 20px;
+    -moz-column-gap: 20px;
   }
   .members .card {
     padding: 1.25rem !important;
@@ -434,6 +434,10 @@ footer hr {
 @media (min-width: 544px) {
   .card-columns {
     column-count: 3;
+    -moz-column-count: 3;
+    -webkit-column-count: 3;
     column-gap: 1.25rem;
+    -moz-column-gap:1.25rem ;
+    -webkit-column-gap: 1.25rem;
   }
 }
