增加用户认证功能-1

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -5758,6 +5758,11 @@ button.close {
 .bg-inverse, .navbar-dark {
   background-color: #202020; }
 
+#navbar {
+  padding: 15px 0;
+  line-height: 50px;
+  margin-bottom: 0; }
+
 .navbar-nav .nav-item {
   float: left; }
 
